# c-data-pack

./: .gitignore  CMakeLists.txt  README.md
cmake/: CDataPack.cmake
res/: hello3.txt
res/dir1/: hello4.txt
res/dir1/dir2/: hello5.txt
src/: include.h  pack.c  test.c  unpack.c  unpack.h
